FastAPI/07_CircuitBreakers/calculate_v2_5xx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculate-v2
  labels:
    app: calculate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculate
  template:
    metadata:
      labels:
        app: calculate
        version: dog-multi
    spec:
      containers:
      - name: calculate
        image: nutslove/fastapi-calculate-5xx:v2
        imagePullPolicy: Always
