FastAPI/07_CircuitBreakers/Istio_Circuit_Breakers.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: calculate-cb-policy
spec:
  host: calculate.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 10s
